# geoshapes

./: manage.py  pyproject.toml
core/: urls.py  views.py
core/templates/: base.html
core/templates/core/: map.html
geoshapes/: asgi.py  settings.py  urls.py  wsgi.py
geoshapes/core/: apps.py  views.py
