[tool.poetry]
name = "geoshapes"
version = "0.1.0"
description = ""
authors = ["Guilherme Moraes <guiferreiramoraes@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
shapely = "^2.0.4"
django = "^5.0.6"
psycopg = "^3.2.1"
dj-database-url = "^2.2.0"
django-decouple = "^2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
